:bug: Add a missing color tag on scripts seen in asset browsers

--- a/src/styl/tags/shared/asset-browser.styl
+++ b/src/styl/tags/shared/asset-browser.styl
@@ -3,6 +3,7 @@ colorMap = {
     texture: hue(mappedColor, 20deg),
     template: hue(mappedColor, 230deg),
     sound: hue(mappedColor, 260deg),
+    script: hue(mappedColor, 55deg),
     tandem: hue(mappedColor, 300deg),
     room: hue(mappedColor, 40deg),
     font: hue(mappedColor, 150deg),
